# crewai-demo

./: README.md  poem.txt  pyproject.toml
src/my_crewai/: main.py
src/my_crewai/crews/poem_crew/: poem_crew.py
