[project]
name = "my_crewai"
version = "0.1.0"
description = "my_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "my_crewai.main:kickoff"
plot = "my_crewai.main:plot"

run_crewai = "my_crewai.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
